2019-06-07  Werner Lemberg  <wl@gnu.org>

	Fix compilation warnings.

	Also do some minor formatting.

	* graph/batch/grbatch.c: Suppress warnings about unused variables.

	* src/*: Suppress warnings about dropping `const'.

2019-06-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Enable batch mode.

	* src/ftcommon.[hc] (FTDemo_Display_New): Pass `device' argument.
	* src/{ftview,ftstring,ftgrid}.c (status): New `device' field.
	(parse_cmdline): Enable batch mode if keys end with `q'.
	* src/{ftview,ftstring,ftgrid}.1: Document it.

2019-06-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] New batch device.

	This driver maintains the image in memory without displaying it,
	useful for batch processing without GUI.

	* graph/batch/grbatch.[hc]: New implenetation files.
	* graph/batch/rules.mk: Makefile with unconditinal compilation.
	* graph/grinit.c (GR_INIT_DEVICE_CHAIN): Add the driver at the tail.

2019-06-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Stay true to linked lists.

	* graph/grinit.c (grInitDevices, grDoneDevices): Properly walk and
	delete entries from the linked list `gr_device_chain'.
	* graph/grdevice.c (find_device): Ditto.
	* graph/grdevice.h (gr_num_devices, gr_max_devices): Removed.
	* graph/grconfig.h (GR_MAX_DEVICES): Ditto.

2019-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Implement PNG printing.

	* src/ftcommon.[hc] (FT_Display_Print): New function.
	* src/{ftgrid,ftview,ftstring}.c (Process_Event): New event.

	* Makefile: Compile with appropriate <ftoption.h> so that
	FT_CONFIG_OPTION_USE_PNG status is inherited from the library build
	and based on the libPNG avalability.

2019-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Consolidate versioning.

	* src/ftcommon.[ch] (FTDemo_Version): New function.
	* src/{ftgrid,ftview,ftstring}.c (parse_cmdline, event_help): Use it.

2019-05-24  Werner Lemberg  <wl@gnu.org>
