@@ -1,3 +1,11 @@
+2019-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftcommon.[hc] (FTDemo_Display_Print): Use `const' qualifier. 
+	* src/ftdump.c (Print_Bytecode): Ditto.
+	* src/ftmulti.c (new_header): Ditto.
+	* src/ftstring.c (header): Ditto.
+	* src/ft{view,grid,string}.c (Process_Event): Updated.
+
 2019-06-07  Werner Lemberg  <wl@gnu.org>
 
 	Fix compilation warnings.
